--- a/freeElectronSim.ipynb
+++ b/freeElectronSim.ipynb
@@ -25,15 +25,15 @@
     "reduced_planck = 6.582119569 * pow (10, -16) #electron volt\n",
     "# band_gap = 9.4 to 9.9 google says 8.96\n",
     "band_gap = 9.4\n",
+    "pi = 3.14159265358979323846264338327950\n",
     "# 300 fs laser pulse\n",
-    "energy = 1 # temp value\n",
+    "e_amplitude = 1 # temp value\n",
     "eosc = ((electron_charge**2)*(energy**2))/(4*electron_mass*(frequency**2))\n",
     "nph = band_gap/(reduced_planck*frequency)\n",
-    "cw = 1 # temp value\n",
     "boltzmann_constant = 1.380649*pow(10,-23) # J/K\n",
-    "p_exchange = (3/2)*cw*((boltzmann_constant*293.15)/reduced_planck) #293.15 is assumed room temperature\n",
     "wmpi = (frequency*(nph**1.5))*((eosc/(2*band_gap))**nph)\n",
-    "wimp = (eosc/band_gap)*((frequency**2*p_exchange)/(p_exchange**2+frequency**2))"
+    "wimp = (eosc/band_gap)*((frequency**2*p_exchange)/(p_exchange**2+frequency**2))\n",
+    "a_bohr = (reduced_planck**2)/(electron_mass*(electron_charge**2))"
    ]
   },
   {
@@ -49,7 +49,12 @@
     "    one_minus = 1-math.exp(-1*wimp*time)\n",
     "    out = (free_electron + na_term*one_minus)*(math.exp(wimp*t))\n",
     "    free_atom = free_atom - out\n",
-    "    return out "
+    "    return out\n",
+    "\n",
+    "def cw(free_electron):\n",
+    "     return 0.31*pi*a_bohr*(free_electron**1/3)\n",
+    "\n",
+    "#p_exchange = (3/2)*cw(free_electron_not=0)*((boltzmann_constant*293.15)/reduced_planck) #293.15 is assumed room temperature"
    ]
   },
   {
@@ -61,6 +66,8 @@
     "free_electron_not = 0\n",
     "for t in range(10):\n",
     "    time = t * pow(10, -9)\n",
+    "    p_exchange = (3/2)*cw(free_electron_not)*((boltzmann_constant*293.15)/reduced_planck) #293.15 is assumed room temperature\n",
+    "    wimp = (eosc/band_gap)*((frequency**2*p_exchange)/(p_exchange**2+frequency**2))\n",
     "    electron_count = electron_density(free_electron_not, time)\n",
     "    free_electron_not = electron_count"
    ]
